--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
     <h2>Información legal</h2>
     <ul>
-      <li><a href="./privacy-policy.html">Política de privacidad</a></li>
-      <li><a href="./terms-of-service.html">Condiciones del servicio</a></li>
+      <li><a href="https://iraitzcordero.github.io/n8n-oauth-legal/privacy-policy.html">Política de privacidad</a></li>
+      <li><a href="https://iraitzcordero.github.io/n8n-oauth-legal/terms-of-service.html">Condiciones del servicio</a></li>
     </ul>
 
     <p class="note">
@@ -67,5 +67,6 @@
     </p>
   </body>
 </html>
+
 
 
